--- a/components/services--contact-form/_services--contact-form.scss
+++ b/components/services--contact-form/_services--contact-form.scss
@@ -110,10 +110,13 @@
   resize: none;
 }
 .contact__btn {
-  background: #000000;
-  color: #676767;
+  border: 2px solid #FFFFFF;
+  background: transparent;
+  color: #FFFFFF;
   &:hover {
     color: #FFFFFF;
+    transform: translate(0,-.2em);
+    box-shadow: 0em 0.6em 0.15em rgba(0,0,0,.1);
   }
 }
 .contact__close {
