--- a/components/header/_header.scss
+++ b/components/header/_header.scss
@@ -52,9 +52,12 @@
   width: 12px;
   height: 4px;
   background: #fff;
-  opacity: 1;
+  opacity: 0;
   margin-bottom: 6px;
   margin-left: 2px;
+  &.active {
+    animation: blink 2s linear infinite;
+  }
 }
 // NAV_MENU
 .header__menu {
