--- a/components/portfolio/_portfolio.scss
+++ b/components/portfolio/_portfolio.scss
@@ -11,22 +11,30 @@
 .portfolio__grid {
   display: grid;
   grid-template-columns: repeat(2,50%);
-  grid-auto-rows: 27vw;
+  grid-auto-rows: auto;
   @media (max-width: $S) {
     grid-template-columns: 100%;
-    grid-auto-rows: 56vw;
   }
+  background-color: #000000;
 }
 .grid__item {
   position: relative;
   width: 100%;
+  overflow: hidden;
   transition: 1s;
   background-position: 50%;
   background-size: 100%;
   background-repeat: no-repeat;
   &.active {
     background-size: 135%;
+    .grid__preview {
+      transform: scale(1.1);
+    }
   }
+}
+.grid__preview {
+  width: 100%;
+  transition: 1s;
 }
 .portfolio__work {
   width: 100%;
@@ -42,6 +50,9 @@
   height: 100%;
 }
 .item__inner {
+  position: absolute;
+  top: 0;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -98,12 +109,6 @@
   background-color: rgba(0, 0, 0, 0.0);
   &:hover {
     opacity: 1;
-  }
-  @media (max-width: $XS) {
-    opacity: 0.7;
-  }
-  @media (max-width: $S) {
-    opacity: 0.7;
   }
 }
 // Portfolio END
