--- a/components/services/_services.scss
+++ b/components/services/_services.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: baseline;
   overflow: hidden;
+  background-color: $main_color;
   @media (max-width: $XS) {
     flex-direction: column;
   }
@@ -127,19 +128,20 @@
   }
 }
 .content__wrapper {
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0 80px 0;
+  padding: 50px 25px 80px;
   opacity: 0;
   transition: 0.5s;
   transform: translateY(100px);
   @media (max-width: $S) {
-    padding: 25px 0 40px 0;
+    padding: 25px 15px 40px;
   }
   @media (max-width: $M) {
-    padding: 35px 0 55px 0;
+    padding: 35px 25px 55px;
   }
   &.active {
     opacity: 1;
@@ -151,7 +153,7 @@
       transform: translateX(0);
     }
     @media (max-width: $XS) {
-      padding: 10px 0;
+      padding: 8px 25px;
     }
   }
 }
