--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -13,4 +13,12 @@
   to { transform: translateX(-50%); }
 }
 
+@keyframes blink {
+  0%,50% {
+    opacity: 0;
+  }
+  51%,100% {
+    opacity: 1;
+  }
+}
 // ANIMATIONS
