--- a/components/header/_header.scss
+++ b/components/header/_header.scss
@@ -21,6 +21,7 @@
 .header__logo {
   opacity: 1;
   max-height: 40px;
+  transition-delay: 1s;
   transition: 0.5s;
   margin-right: 6.5px;
   @media (max-width: $S) {
@@ -32,6 +33,7 @@
   height: 23px;
   width: 0px;
   opacity: 1;
+  transition-delay: 1s;
   transition: 0.5s;
   background: no-repeat url("img/dest/main_title.png");
   background-size: 93px 23px;
