--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,20 +11,12 @@
 //@import "utils";
 // @import "sprite-svg";
 // @import "sprite-png";
-
-//@import "../components/icon/icon";
-//@import "../components/button/button";
-//@import "../components/menu/menu";
-//@import "../components/page/page";
-//@import "../components/main-footer/main-footer";
-//@import "../components/card/card";
-//@import "../components/card-list/card-list";
 @import "../components/header/header";
 @import "../components/footer/footer";
 @import "../components/overlay/overlay";
 @import "../components/services/services";
 @import "../components/services--contact-form/services--contact-form";
 @import "../components/portfolio/portfolio";
-@import "../components/block/block";
+@import "../components/socials-list/socials-list";
 @import "../components/marquee/marquee";
 @import "../components/preloader/preloader";
