--- a/components/preloader/_preloader.scss
+++ b/components/preloader/_preloader.scss
@@ -8,7 +8,17 @@
   background: #000000;
   overflow: hidden;
 }
+.preloader_load {
+  position: fixed;
+  top: 0;
+  opacity: 1;
+  z-index: 99999;
+  &.active {
+    opacity: 0;
+  }
+}
 .preloader__container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,24 +29,31 @@
   @media(max-width: $S){
     margin: 50px;
   }
-  animation: preloader__rotation 6s;
+}
+.preloader__box_load {
+    animation: preloader__rotation 6s;
 }
 .preloader__smile {
   max-width: 100px;
   max-height: 100px;
   width: 100%;
-  height: 100%;
-  opacity: 0;
   position: absolute;
-  background: no-repeat url(img/dest/smile_loading.png);
-  background-size: contain;
-  background-position: 50%;
-  transition: 0.5s;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   @media (max-width: $XS) {
     max-width: 75px;
   }
   @media (max-width: $S) {
     max-width: 85px;
+  }
+}
+.preloader__smile_load {
+  visibility: hidden;
+  opacity: 0;
+  &.active {
+    visibility: visible;
+    opacity: 1;
   }
 }
 .preloader__image {
